--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                   <button class="button-icon">
                     <svg class="soc-icon">
                       <use
-                        href="../images/symbol-defs.svg#icon-Instagram"
+                        href="./images/symbol-defs.svg#icon-Instagram"
                         class="bg-icon"
                       ></use>
                     </svg>
@@ -186,14 +186,14 @@
                 <li class="icon-team">
                   <button class="button-icon">
                     <svg class="soc-icon">
-                      <use href="../images/symbol-defs.svg#icon-twitter"></use>
+                      <use href="./images/symbol-defs.svg#icon-twitter"></use>
                     </svg>
                   </button>
                 </li>
                 <li class="icon-team">
                   <button class="button-icon">
                     <svg class="soc-icon">
-                      <use href="../images/symbol-defs.svg#icon-facebook"></use>
+                      <use href="./images/symbol-defs.svg#icon-facebook"></use>
                     </svg>
                   </button>
                 </li>
@@ -201,7 +201,7 @@
                 <li class="icon-team">
                   <button class="button-icon">
                     <svg class="soc-icon">
-                      <use href="../images/symbol-defs.svg#icon-linkedin"></use>
+                      <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                     </svg>
                   </button>
                 </li>
@@ -221,7 +221,7 @@
                   <button class="button-icon">
                     <svg class="soc-icon">
                       <use
-                        href="../images/symbol-defs.svg#icon-Instagram"
+                        href="./images/symbol-defs.svg#icon-Instagram"
                         class="bg-icon"></use>
                     </svg>
                   </button>
@@ -230,21 +230,21 @@
                 <li class="icon-team">
                   <button class="button-icon">
                     <svg class="soc-icon">
-                      <use href="../images/symbol-defs.svg#icon-twitter"></use>
+                      <use href="./images/symbol-defs.svg#icon-twitter"></use>
                     </svg>
                   </button>
                 </li>
                 <li class="icon-team">
                   <button class="button-icon">
                     <svg class="soc-icon">
-                      <use href="../images/symbol-defs.svg#icon-facebook"></use>
+                      <use href="./images/symbol-defs.svg#icon-facebook"></use>
                     </svg>
                   </button>
                 </li>
                 <li class="icon-team">
                   <button class="button-icon">
                     <svg class="soc-icon">
-                      <use href="../images/symbol-defs.svg#icon-linkedin"></use>
+                      <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                     </svg>
                   </button>
                 </li>
@@ -259,7 +259,7 @@
                   <button class="button-icon">
                     <svg class="soc-icon">
                       <use
-                        href="../images/symbol-defs.svg#icon-Instagram"
+                        href="./images/symbol-defs.svg#icon-Instagram"
                         class="bg-icon"
                       ></use>
                     </svg>
@@ -269,7 +269,7 @@
                 <li class="icon-team">
                   <button class="button-icon">
                     <svg class="soc-icon">
-                      <use href="../images/symbol-defs.svg#icon-twitter"></use>
+                      <use href="./images/symbol-defs.svg#icon-twitter"></use>
                     </svg>
                   </button>
                 </li>
@@ -284,7 +284,7 @@
                 <li class="icon-team">
                   <button class="button-icon">
                     <svg class="soc-icon">
-                      <use href="../images/symbol-defs.svg#icon-linkedin"></use>
+                      <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                     </svg>
                   </button>
                 </li>
@@ -303,7 +303,7 @@
                   <button class="button-icon">
                     <svg class="soc-icon">
                       <use
-                        href="../images/symbol-defs.svg#icon-Instagram"
+                        href="./images/symbol-defs.svg#icon-Instagram"
                         class="bg-icon"
                       ></use>
                     </svg>
@@ -313,14 +313,14 @@
                 <li class="icon-team">
                   <button class="button-icon">
                     <svg class="soc-icon">
-                      <use href="../images/symbol-defs.svg#icon-twitter"></use>
+                      <use href="./images/symbol-defs.svg#icon-twitter"></use>
                     </svg>
                   </button>
                 </li>
                 <li class="icon-team">
                   <button class="button-icon">
                     <svg class="soc-icon">
-                      <use href="../images/symbol-defs.svg#icon-facebook"></use>
+                      <use href="./images/symbol-defs.svg#icon-facebook"></use>
                     </svg>
                   </button>
                 </li>
@@ -328,7 +328,7 @@
                 <li class="icon-team">
                   <button class="button-icon">
                     <svg class="soc-icon">
-                      <use href="../images/symbol-defs.svg#icon-linkedin"></use>
+                      <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                     </svg>
                   </button>
                 </li>
@@ -346,7 +346,7 @@
             <button class="button-cost-icon">
               <svg class="cost-icon" width="106px" height="60px">
                 <use
-                  href="../images/symbol-defs.svg#icon-cust-ya-co"
+                  href="./images/symbol-defs.svg#icon-cust-ya-co"
                 ></use>
               </svg>
             </button>
@@ -355,7 +355,7 @@
             <button class="button-cost-icon">
               <svg class="cost-icon" width="106px" height="60px">
                 <use
-                  href="../images/symbol-defs.svg#icon-cust-company"
+                  href="./images/symbol-defs.svg#icon-cust-company"
                 ></use>
               </svg>
             </button>
@@ -364,7 +364,7 @@
             <button class="button-cost-icon">
               <svg class="cost-icon" width="106px" height="60px">
                 <use
-                  href="../images/symbol-defs.svg#icon-cust-round"
+                  href="./images/symbol-defs.svg#icon-cust-round"
                 ></use>
               </svg>
             </button>
@@ -373,7 +373,7 @@
             <button class="button-cost-icon">
               <svg class="cost-icon" width="106px" height="60px">
                 <use
-                  href="../images/symbol-defs.svg#icon-cust-foster"
+                  href="./images/symbol-defs.svg#icon-cust-foster"
                 ></use>
               </svg>
             </button>
@@ -382,7 +382,7 @@
             <button class="button-cost-icon">
               <svg class="cost-icon" width="106px" height="60px">
                 <use
-                  href="../images/symbol-defs.svg#icon-cust-brand"
+                  href="./images/symbol-defs.svg#icon-cust-brand"
                 ></use>
               </svg>
             </button>
@@ -391,7 +391,7 @@
             <button class="button-cost-icon">
               <svg class="cost-icon" width="106px" height="60px">
                 <use
-                  href="../images/symbol-defs.svg#icon-cust-tag-line"
+                  href="./images/symbol-defs.svg#icon-cust-tag-line"
                 ></use>
               </svg>
             </button>
@@ -434,7 +434,7 @@
                   <button class="button-icon">
                     <svg class="soc-icon">
                       <use
-                        href="../images/symbol-defs.svg#icon-Instagram"
+                        href="./images/symbol-defs.svg#icon-Instagram"
                         class="bg-icon"></use>
                     </svg>
                   </button>
@@ -442,21 +442,21 @@
                 <li class="icon-footer">
                   <button class="button-icon">
                     <svg class="soc-icon">
-                      <use href="../images/symbol-defs.svg#icon-twitter"></use>
+                      <use href="./images/symbol-defs.svg#icon-twitter"></use>
                     </svg>
                   </button>
                 </li>
                 <li class="icon-footer">
                   <button class="button-icon">
                     <svg class="soc-icon">
-                      <use href="../images/symbol-defs.svg#icon-facebook"></use>
+                      <use href="./images/symbol-defs.svg#icon-facebook"></use>
                     </svg>
                   </button>
                 </li>
                 <li class="icon-footer">
                   <button class="button-icon">
                     <svg class="soc-icon">
-                      <use href="../images/symbol-defs.svg#icon-linkedin"></use>
+                      <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                     </svg>
                   </button>
                 </li>
