--- a/portfolio.html
+++ b/portfolio.html
@@ -207,21 +207,21 @@
             <li class="icon-footer">
               <button class="button-icon">
                 <svg class="soc-icon">
-                  <use href="../images/symbol-defs.svg#icon-twitter"></use>
+                  <use href="./images/symbol-defs.svg#icon-twitter"></use>
                 </svg>
               </button>
             </li>
             <li class="icon-footer">
               <button class="button-icon">
                 <svg class="soc-icon">
-                  <use href="../images/symbol-defs.svg#icon-facebook"></use>
+                  <use href="./images/symbol-defs.svg#icon-facebook"></use>
                 </svg>
               </button>
             </li>
             <li class="icon-footer">
               <button class="button-icon">
                 <svg class="soc-icon">
-                  <use href="../images/symbol-defs.svg#icon-linkedin"></use>
+                  <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                 </svg>
               </button>
             </li>
