removed the points

--- a/portfolio.html
+++ b/portfolio.html
@@ -198,7 +198,7 @@
               <button class="button-icon">
                 <svg class="soc-icon">
                   <use
-                    href="../images/symbol-defs.svg#icon-Instagram"
+                    href="./images/symbol-defs.svg#icon-Instagram"
                     class="bg-icon"
                   ></use>
                 </svg>
