--- a/portfolio.html
+++ b/portfolio.html
@@ -45,13 +45,19 @@
 
           <ul class="header-list-contact list">
             <li class="header-mail links">
-              <a href="mailto:info@devstudio.com" class="header-mail-link link"
-                >info@devstudio.com</a
+              <a href="mailto:info@devstudio.com" class="header-mail-link link">
+                <svg class="head-icon">
+                  <use href="./images/symbol-defs.svg#icon-envelope"></use>
+                </svg>
+                info@devstudio.com</a
               >
             </li>
             <li class="header-tel links">
-              <a href="tel:+380961111111" class="header-tell-link link"
-                >+38 096 111 11 11</a
+              <a href="tel:+380961111111" class="header-tell-link link">
+                <svg class="head-icon">
+                  <use href="./images/symbol-defs.svg#icon-smartphone"></use>
+                </svg>
+                +38 096 111 11 11</a
               >
             </li>
           </ul>
