edit button -link

--- a/index.html
+++ b/index.html
@@ -173,37 +173,37 @@
 
               <ul class="team-bt-icon">
                 <li class="icon-team">
-                  <button class="button-icon">
+                  <a href="" class="link-icon">
                     <svg class="soc-icon">
                       <use
                         href="./images/symbol-defs.svg#icon-Instagram"
                         class="bg-icon"
                       ></use>
                     </svg>
-                  </button>
+                  </a>
                 </li>
                 <li class="icon-team"></li>
                 <li class="icon-team">
-                  <button class="button-icon">
+                  <a href="" class="link-icon">
                     <svg class="soc-icon">
                       <use href="./images/symbol-defs.svg#icon-twitter"></use>
                     </svg>
-                  </button>
+                  </a>
                 </li>
                 <li class="icon-team">
-                  <button class="button-icon">
+                  <a href="" class="link-icon">
                     <svg class="soc-icon">
                       <use href="./images/symbol-defs.svg#icon-facebook"></use>
                     </svg>
-                  </button>
+                  </a>
                 </li>
 
                 <li class="icon-team">
-                  <button class="button-icon">
+                  <a href="" class="link-icon">
                     <svg class="soc-icon">
                       <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                     </svg>
-                  </button>
+                  </a>
                 </li>
               </ul>
             </li>
@@ -218,35 +218,35 @@
 
               <ul class="team-bt-icon">
                 <li class="icon-team">
-                  <button class="button-icon">
+                  <a href="" class="link-icon">
                     <svg class="soc-icon">
                       <use
                         href="./images/symbol-defs.svg#icon-Instagram"
                         class="bg-icon"></use>
                     </svg>
-                  </button>
+                  </a>
                 </li>
                 <li class="icon-team"></li>
                 <li class="icon-team">
-                  <button class="button-icon">
+                  <a href="" class="link-icon">
                     <svg class="soc-icon">
                       <use href="./images/symbol-defs.svg#icon-twitter"></use>
                     </svg>
-                  </button>
+                  </a>
                 </li>
                 <li class="icon-team">
-                  <button class="button-icon">
+                  <a href="" class="link-icon">
                     <svg class="soc-icon">
                       <use href="./images/symbol-defs.svg#icon-facebook"></use>
                     </svg>
-                  </button>
+                  </a>
                 </li>
                 <li class="icon-team">
-                  <button class="button-icon">
+                  <a href="" class="link-icon">
                     <svg class="soc-icon">
                       <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                     </svg>
-                  </button>
+                  </a>
                 </li>
               </ul>
             </li>
@@ -256,37 +256,36 @@
               <p class="team-item-text">Marketing</p>
               <ul class="team-bt-icon">
                 <li class="icon-team">
-                  <button class="button-icon">
+                  <a href="" class="link-icon">
                     <svg class="soc-icon">
                       <use
                         href="./images/symbol-defs.svg#icon-Instagram"
                         class="bg-icon"
                       ></use>
                     </svg>
-                  </button>
+                  </a>
                 </li>
-                <li class="icon-team"></li>
                 <li class="icon-team">
-                  <button class="button-icon">
+                  <a href="" class="link-icon">
                     <svg class="soc-icon">
                       <use href="./images/symbol-defs.svg#icon-twitter"></use>
                     </svg>
-                  </button>
+                  </a>
                 </li>
                 <li class="icon-team">
-                  <button class="button-icon">
+                  <a href="" class="link-icon">
                     <svg class="soc-icon">
                       <use href="../images/symbol-defs.svg#icon-facebook"></use>
                     </svg>
-                  </button>
+                  </a>
                 </li>
 
                 <li class="icon-team">
-                  <button class="button-icon">
+                  <a href="" class="link-icon">
                     <svg class="soc-icon">
                       <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                     </svg>
-                  </button>
+                  </a>
                 </li>
               </ul>
             </li>
@@ -300,37 +299,37 @@
               <p class="team-item-text">UI Designer</p>
               <ul class="team-bt-icon">
                 <li class="icon-team">
-                  <button class="button-icon">
+                  <a href="" class="link-icon">
                     <svg class="soc-icon">
                       <use
                         href="./images/symbol-defs.svg#icon-Instagram"
                         class="bg-icon"
                       ></use>
                     </svg>
-                  </button>
+                  </a>
                 </li>
                 <li class="icon-team"></li>
                 <li class="icon-team">
-                  <button class="button-icon">
+                  <a href="" class="link-icon">
                     <svg class="soc-icon">
                       <use href="./images/symbol-defs.svg#icon-twitter"></use>
                     </svg>
-                  </button>
+                  </a>
                 </li>
                 <li class="icon-team">
-                  <button class="button-icon">
+                  <a href="" class="link-icon">
                     <svg class="soc-icon">
                       <use href="./images/symbol-defs.svg#icon-facebook"></use>
                     </svg>
-                  </button>
+                  </a>
                 </li>
 
                 <li class="icon-team">
-                  <button class="button-icon">
+                  <a href="" class="link-icon">
                     <svg class="soc-icon">
                       <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                     </svg>
-                  </button>
+                  </a>
                 </li>
               </ul>
             </li>
@@ -343,58 +342,58 @@
         <h2 class="team-title">Постійні клієнти</h2>
         <ul class="cost-bt-icon">
           <li class="icon-cost">
-            <button class="button-cost-icon">
+            <a href="" class="link-cost-icon">
               <svg class="cost-icon" width="106px" height="60px">
                 <use
                   href="./images/symbol-defs.svg#icon-cust-ya-co"
                 ></use>
               </svg>
-            </button>
+            </a>
           </li>
           <li class="icon-cost">
-            <button class="button-cost-icon">
+            <a href="" class="link-cost-icon">
               <svg class="cost-icon" width="106px" height="60px">
                 <use
                   href="./images/symbol-defs.svg#icon-cust-company"
                 ></use>
               </svg>
-            </button>
+            </a>
           </li>
           <li class="icon-cost">
-            <button class="button-cost-icon">
+            <a href="" class="link-cost-icon">
               <svg class="cost-icon" width="106px" height="60px">
                 <use
                   href="./images/symbol-defs.svg#icon-cust-round"
                 ></use>
               </svg>
-            </button>
+            </a>
           </li>
           <li class="icon-cost">
-            <button class="button-cost-icon">
+            <a href="" class="link-cost-icon">
               <svg class="cost-icon" width="106px" height="60px">
                 <use
                   href="./images/symbol-defs.svg#icon-cust-foster"
                 ></use>
               </svg>
-            </button>
+            </a>
           </li>
           <li class="icon-cost">
-            <button class="button-cost-icon">
+            <a href="" class="link-cost-icon">
               <svg class="cost-icon" width="106px" height="60px">
                 <use
                   href="./images/symbol-defs.svg#icon-cust-brand"
                 ></use>
               </svg>
-            </button>
+            </a>
           </li>
           <li class="icon-cost">
-            <button class="button-cost-icon">
+            <a href="" class="link-cost-icon">
               <svg class="cost-icon" width="106px" height="60px">
                 <use
                   href="./images/symbol-defs.svg#icon-cust-tag-line"
                 ></use>
               </svg>
-            </button>
+            </a>
           </li>
         </ul>
         </div>
@@ -431,34 +430,34 @@
           <h2 class="titl-footer">приєднуйтесь</h2>
         <ul class="footer-bt-icon">
                 <li class="icon-footer">
-                  <button class="button-icon">
+                  <a href="" class="link-icon">
                     <svg class="soc-icon">
                       <use
                         href="./images/symbol-defs.svg#icon-Instagram"
                         class="bg-icon"></use>
                     </svg>
-                  </button>
+                  </a>
                 </li>
                 <li class="icon-footer">
-                  <button class="button-icon">
+                  <a href="" class="link-icon">
                     <svg class="soc-icon">
                       <use href="./images/symbol-defs.svg#icon-twitter"></use>
                     </svg>
-                  </button>
+                  </a>
                 </li>
                 <li class="icon-footer">
-                  <button class="button-icon">
+                  <a href="" class="link-icon">
                     <svg class="soc-icon">
                       <use href="./images/symbol-defs.svg#icon-facebook"></use>
                     </svg>
-                  </button>
+                  </a>
                 </li>
                 <li class="icon-footer">
-                  <button class="button-icon">
+                  <a href="" class="link-icon">
                     <svg class="soc-icon">
                       <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                     </svg>
-                  </button>
+                  </a>
                 </li>
               </ul>
         </div>
