--- a/portfolio.html
+++ b/portfolio.html
@@ -91,78 +91,97 @@
           <h2 class="visually-hidden">portfolio</h2>
           <ul class="portfolio-list list">
             <li class="portfolio-item">
-              <img src="./images/tehnocriak.jpg" alt="Технокряк" />
-              <div class="portfolio-text">
-                <h2 class="portfolio-item-title">Технокряк</h2>
-                <p class="portfolio-item-text">Веб-сайт</p>
-              </div>
+              <a href="" class="gallery-link">
+                <img src="./images/tehnocriak.jpg" alt="Технокряк" />
+                <div class="portfolio-text">
+                  <h2 class="portfolio-item-title">Технокряк</h2>
+                  <p class="portfolio-item-text">Веб-сайт</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-item">
-              <img src="./images/new-orlean.jpg" alt="Фронтенд-разработчик" />
-              <div class="portfolio-text">
-                <h2 class="portfolio-item-title">
-                  Постер New Orlean vs Golden Star
-                </h2>
-                <p class="portfolio-item-text">Дизайн</p>
-              </div>
+              <a href="" class="gallery-link">
+                <img src="./images/new-orlean.jpg" alt="Фронтенд-разработчик" />
+                <div class="portfolio-text">
+                  <h2 class="portfolio-item-title">
+                    Постер New Orlean vs Golden Star
+                  </h2>
+                  <p class="portfolio-item-text">Дизайн</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-item">
-              <img src="./images/seafood.jpg" alt="Маркетолог" />
-              <div class="portfolio-text">
-                <h2 class="portfolio-item-title">Ресторан Seafood</h2>
-                <p class="portfolio-item-text">Додаток</p>
-              </div>
+              <a href="" class="gallery-link">
+                <img src="./images/seafood.jpg" alt="Маркетолог" />
+                <div class="portfolio-text">
+                  <h2 class="portfolio-item-title">Ресторан Seafood</h2>
+                  <p class="portfolio-item-text">Додаток</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/prime.jpg"
-                alt="Дизайнер інтерфейсу користувача"
-              />
-              <div class="portfolio-text">
-                <h2 class="portfolio-item-title">Проєкт Prime</h2>
-                <p class="portfolio-item-text">Маркетинг</p>
-              </div>
+              <a href="" class="gallery-link">
+                <img
+                  src="./images/prime.jpg"
+                  alt="Дизайнер інтерфейсу користувача" />
+                <div class="portfolio-text">
+                  <h2 class="portfolio-item-title">Проєкт Prime</h2>
+                  <p class="portfolio-item-text">Маркетинг</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-item">
-              <img src="./images/boxes.jpg" alt="Технокряк" />
-              <div class="portfolio-text">
-                <h2 class="portfolio-item-title">Проєкт Boxes</h2>
-                <p class="portfolio-item-text">Додаток</p>
-              </div>
+              <a href="" class="gallery-link">
+                <img src="./images/boxes.jpg" alt="Технокряк" />
+                <div class="portfolio-text">
+                  <h2 class="portfolio-item-title">Проєкт Boxes</h2>
+                  <p class="portfolio-item-text">Додаток</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-item">
-              <img src="./images/inspiration.jpg" alt="Фронтенд-разработчик" />
-              <div class="portfolio-text">
-                <h2 class="portfolio-item-title">Inspiration has no Borders</h2>
-                <p class="portfolio-item-text">Веб-сайт</p>
-              </div>
+              <a href="" class="gallery-link">
+                <img
+                  src="./images/inspiration.jpg"
+                  alt="Фронтенд-разработчик" />
+                <div class="portfolio-text">
+                  <h2 class="portfolio-item-title">
+                    Inspiration has no Borders
+                  </h2>
+                  <p class="portfolio-item-text">Веб-сайт</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-item">
-              <img src="./images/limited-edition.jpg" alt="Маркетолог" />
-              <div class="portfolio-text">
-                <h2 class="portfolio-item-title">Видання Limited Edition</h2>
-                <p class="portfolio-item-text">Дизайн</p>
-              </div>
+              <a href="" class="gallery-link">
+                <img src="./images/limited-edition.jpg" alt="Маркетолог" />
+                <div class="portfolio-text">
+                  <h2 class="portfolio-item-title">Видання Limited Edition</h2>
+                  <p class="portfolio-item-text">Дизайн</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/lab.jpg"
-                alt="Дизайнер інтерфейсу користувача"
-              />
-              <div class="portfolio-text">
-                <h2 class="portfolio-item-title">Проект LAB</h2>
-                <p class="portfolio-item-text">Маркетинг</p>
-              </div>
+              <a href="" class="gallery-link">
+                <img
+                  src="./images/lab.jpg"
+                  alt="Дизайнер інтерфейсу користувача" />
+                <div class="portfolio-text">
+                  <h2 class="portfolio-item-title">Проект LAB</h2>
+                  <p class="portfolio-item-text">Маркетинг</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/growin-busness.jpg"
-                alt="Дизайнер інтерфейсу користувача"
-              />
-              <div class="portfolio-text">
-                <h2 class="portfolio-item-title">Growing Business</h2>
-                <p class="portfolio-item-text">Додаток</p>
-              </div>
+              <a href="" class="gallery-link">
+                <img
+                  src="./images/growin-busness.jpg"
+                  alt="Дизайнер інтерфейсу користувача" />
+                <div class="portfolio-text">
+                  <h2 class="portfolio-item-title">Growing Business</h2>
+                  <p class="portfolio-item-text">Додаток</p>
+                </div>
+              </a>
             </li>
           </ul>
         </div>
@@ -201,35 +220,35 @@
           <h2 class="titl-footer">приєднуйтесь</h2>
           <ul class="footer-bt-icon">
             <li class="icon-footer">
-              <button class="button-icon">
+              <a href="" class="link-icon">
                 <svg class="soc-icon">
                   <use
                     href="./images/symbol-defs.svg#icon-Instagram"
                     class="bg-icon"
                   ></use>
                 </svg>
-              </button>
+              </a>
             </li>
             <li class="icon-footer">
-              <button class="button-icon">
+              <a href="" class="link-icon">
                 <svg class="soc-icon">
                   <use href="./images/symbol-defs.svg#icon-twitter"></use>
                 </svg>
-              </button>
+              </a>
             </li>
             <li class="icon-footer">
-              <button class="button-icon">
+              <a href="" class="link-icon">
                 <svg class="soc-icon">
                   <use href="./images/symbol-defs.svg#icon-facebook"></use>
                 </svg>
-              </button>
+              </a>
             </li>
             <li class="icon-footer">
-              <button class="button-icon">
+              <a href="" class="link-icon">
                 <svg class="soc-icon">
                   <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                 </svg>
-              </button>
+              </a>
             </li>
           </ul>
         </div>
